# SkiAll

./: LICENSE  README.md  TODOS.md  pyproject.toml
src/skiall/: __init__.py  cli.py
src/skiall/adapters/: base.py  claude_code.py  codex.py  shared.py
src/skiall/core/: engine.py  manifest.py  merger.py  secrets.py  sync.py  types.py
tests/test_adapters/: test_claude_code.py  test_codex.py  test_shared.py
tests/test_cli/: test_cli.py
tests/test_core/: test_engine.py  test_manifest.py  test_merger.py  test_secrets.py  test_sync.py  test_sync_integration.py
